# AndroidNdk

NDK/: gradle.properties
NDK/app/: build.gradle
NDK/app/src/androidTest/java/com/ci123/ndk/: ExampleInstrumentedTest.java
NDK/app/src/main/: AndroidManifest.xml
NDK/app/src/main/cpp/: CMakeLists.txt
NDK/app/src/main/cpp/one/: CMakeLists.txt  one.cpp
NDK/app/src/main/cpp/two/: CMakeLists.txt  two.cpp
NDK/app/src/main/java/com/ci123/ndk/: MainActivity.java
NDK/app/src/main/res/layout/: activity_main.xml
NDK/app/src/test/java/com/ci123/ndk/: ExampleUnitTest.java
NDK/gradle/wrapper/: gradle-wrapper.properties
